Made form actions div have correct spacing

--- a/h/sass/common.scss
+++ b/h/sass/common.scss
@@ -124,6 +124,10 @@ span.errorMsg {
   .control-group:first-of-type {
     margin-top: 0;
   }
+
+  .form-actions {
+    margin: 1em 0
+  }
 }
 
 .req {
